--- a/BibVB/BibVB.vbproj
+++ b/BibVB/BibVB.vbproj
@@ -1,12 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
+        <RootNamespace>BibVB</RootNamespace>
         <TargetFramework>netcoreapp2.2</TargetFramework>
     </PropertyGroup>
-
-    <ItemGroup>
-      <ProjectReference Include="..\BibVB\BibVB.vbproj" />
-    </ItemGroup>
 
 </Project>
